# TICSQtCreator

./: CMakeLists.txt  TICSQtCreator.json.in  ticsoutputpane.cpp  ticsqtcreator.pro  ticsqtcreatorconstants.h  ticsqtcreatorplugin.cpp  ticsqtcreatorplugin.h
.github/workflows/: build_cmake.yml
